--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       opacity: .8;
       object-fit: cover;
       /* object-position: top; */
-      object-position:0 -30px;
+/*object-position:0 -30px; */
       width: 100%;
       height: 95vh;
     }
