--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       opacity: .8;
       object-fit: cover;
       /* object-position: top; */
-/*object-position:0 -30px; */
+      object-position:0 -30px;
       width: 100%;
       height: 95vh;
     }
@@ -88,6 +88,7 @@
   <li id="global-hovering"><a href="avater.html">avater</a></li> 
   <li id="global-hovering"><a href="meta.html">metaverse</a></li> 
   <li id="global-hovering"><a href="elearning.html">learning</a></li> 
+  <li id="global-hovering"><a href="http://localhost/blog/wordpress/">blog</a></li>
   </ul>
   </div>
   </nav>
@@ -152,7 +153,7 @@
     <!--太目の帯を日本語太字フォントで-->
     <br>
     <p>
-    <h2 class="catch2">解き放たれろ?未来の人材を創造する、高校生の為のonline塾『デクサス』がついに開講!!!</h2>
+    <h2 class="catch2">解き放たれろ‼未来の人材を創造する、高校生の為のonline塾『デクサス』がついに開講!!!</h2>
     【 -Digital X-formation School- 】
     </p>
     <p>
