--- a/info.html
+++ b/info.html
@@ -34,6 +34,7 @@
     <li id="global-hovering"><a href="avater.html">avater</a></li> 
     <li id="global-hovering"><a href="meta.html">metaverse</a></li> 
     <li id="global-hovering"><a href="elearning.html">learning</a></li> 
+    <li id="global-hovering"><a href="http://localhost/blog/wordpress/">blog</a></li>
    </ul>
    </div>
    </nav>
