--- a/plan.html
+++ b/plan.html
@@ -7,7 +7,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"><!--ヴューポート-->
 	<meta name="description" content="online clamschool"><!--ディスクリプション-->
-	<title>DTO school</title>
+	<title>DXO school</title>
   <!--↓フォント変更予定↓-->
 	<link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css">
 	<link href="https://fonts.googleapis.com/css2?family=Philosopher&display=swap" rel="stylesheet">
@@ -34,6 +34,7 @@
   <li id="global-hovering"><a href="avater.html">avater</a></li> 
   <li id="global-hovering"><a href="meta.html">metaverse</a></li> 
   <li id="global-hovering"><a href="elearning.html">learning</a></li> 
+  <li id="global-hovering"><a href="http://localhost/blog/wordpress/">blog</a></li>
  </ul>
  </div>
  </nav>
@@ -143,6 +144,7 @@
         <li>次世代の指導の可能性を感じ、プログラミングを学習中</li>
         <li>英検1級など資格試験に挑戦中</li>
       </ul>
+      <div class="sub-memu-blog"><a href="http://localhost/blog/wordpress/">【Official Blog】</a></div>
       <img id="profile"src="images/profile.png.png" alt="PROFILE IMAGE"><br>
 
 
