--- a/topic.html
+++ b/topic.html
@@ -7,7 +7,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"><!--ヴューポート-->
 	<meta name="description" content="online clamschool"><!--ディスクリプション-->
-	<title>DTO school</title>
+	<title>DXO school</title>
   <!--↓フォント変更予定↓-->
 	<link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css">
 	<link href="https://fonts.googleapis.com/css2?family=Philosopher&display=swap" rel="stylesheet">
@@ -33,6 +33,7 @@
     <li id="global-hovering"><a href="avater.html">avater</a></li> 
     <li id="global-hovering"><a href="meta.html">metaverse</a></li> 
     <li id="global-hovering"><a href="elearning.html">learning</a></li> 
+    <li id="global-hovering"><a href="http://localhost/blog/wordpress/">blog</a></li>
    </ul>
    </div>
    </nav>
